Change log for the UFTP standalone client
The issue tracker is at
https://sourceforge.net/p/unicore/uftp-issues/


UFTP Client 1.4.0 (released mmm dd, 2020)
-----------------------------------------
 - update to log4j2
 - fix: debian package now depends on "default-jre-headless"

 
UFTP Client 1.3.2 (released Sep 18, 2020)
-----------------------------------------
 - new feature: support FTP proxies (DeleGate, Frox)
 - fix: check ~/.uftp before ~/.ssh for private keys

UFTP Client 1.3.1 (released Jul 21, 2020)
-----------------------------------------
 - fix: don't query password for password-less keys 
 - fix: SSH: make sure key specified by "--identity ..." is used
   when ssh-agent is present

UFTP Client 1.3.0 (released Jun 17, 2020)
 -----------------------------------------
 - SSH: support for ed25519 keys
 - SSH: improved ssh-agent support when multiple keys
   are available

UFTP Client 1.2.0 (released Apr 16, 2020)
-----------------------------------------
 - improved error messages and removed stack traces
 - fix: client can hang when multiple threads are
   used (#60)


UFTP Client 1.1.0 (released Feb 13, 2020)
-----------------------------------------
 - improved "share" command
   (thanks to Jens Henrik Goebbert for many suggestions)
   - add separate option for server URL. If not given, the
   server URL is read from environment variable UFTP_SHARE_URL
   - non-absolute paths will be made absolute
   - --anonymous is the default sharing mode
 - console output for new shares now prints the http access URL
   and the full share info in verbose mode
 - if no auth option is given, use "-u $USER" as default
 - renamed 'get'/'put' to 'get-share'/'put-share'
 - fix: truncate existing local file when downloading to avoid
   corrupted file by only partially overwriting existing data (#56)

UFTP Client 1.0.0 (released Sep 30, 2019)
-----------------------------------------
 - new feature: client can create session using a UNICORE/X