@@ -12,3 +12,4 @@ eu.unicore.uftp.standalone.commands.Share
 eu.unicore.uftp.standalone.commands.GetSharedFile
 eu.unicore.uftp.standalone.commands.PutSharedFile
 eu.unicore.uftp.standalone.commands.UTunnel
+eu.unicore.uftp.standalone.commands.Auth
